--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,23 @@
 .DS_Store
 node_modules
 /dist
-.eslintrc.js
-package-lock.json
-babel.config.js
-.browserslistrc
+
+
+# local env files
+.env.local
+.env.*.local
+
+# Log files
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+
+# Editor directories and files
+.idea
+.vscode
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
